# jobd

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-image.yml  publish-registry.yml  release.yml
changelog.d/: README.md  agent-cookbook.added.md  changelog-fragments.added.md  competitive-positioning.changed.md  config-catalog.added.md  configless-quickstart.fixed.md  demo-rerecord.changed.md  docker-fleet-assets.fixed.md  env-scrub-at-rest.security.md  fleet-bootstrap.added.md  kill-timer-close-race.fixed.md  repo-visuals.changed.md  run-job-decomposition.changed.md  stage3-routers.changed.md  stdin-follow.added.md  test-ci-hygiene.changed.md  version-drift-event.added.md  wait-db-offloop.changed.md  workload-token-scrub.security.md
config/: classifier.yaml  profiles.yaml  projects.yaml
docs/: ARCHITECTURE.md  agent-cookbook.md  configuration.md  preemption.md  projects-yaml.md  runbook.md  security.md
docs/plans/: 2026-06-30-submit-cwd-probe-deploy.md  2026-06-30-submit-cwd-probe-design.md  2026-06-30-submit-cwd-probe.md  sigterm-drain.md
examples/claude-code-hooks/: README.md  jobd-block-gpu.sh  jobd-nudge.sh  test-jobd-nudge.sh
scripts/: cron.example  deploy-broker.sh  fix-cli-shims.sh  healthcheck.py  install-worker.sh  job-worker.service  jobd-broker.service  jobd-deploy.service  jobd-deploy.timer  jobd-worker-update.service  jobd-worker-update.timer  roll-changelog.py  run-live-test.sh  update-worker.sh
src/job_cli/: cli.py  fleet.py
src/jobd/: __init__.py  app.py  arrays.py  auth.py  cgroup_walk.py  classifier.py  client.py  config.py  ctest_eta.py  db.py  estimator.py  events.py  gpu_holder_probe.py  main.py  matcher.py  metrics.py  models.py  subreaper.py
tests/: conftest.py  test_api.py  test_app_auth_wiring.py  test_append_log_guard.py  test_arrays.py  test_auth.py  test_auth_exemptions.py  test_auth_hardening.py  test_cancel_signal_guards.py  test_capabilities.py  test_cascade_emit_after_commit.py  test_cd_scripts_execution.py  test_changelog_fragments.py  test_classifier.py  test_cli.py  test_cli_audit.py  test_cli_broker_errors.py  test_cli_graph.py  test_cli_polish.py  test_cli_stdin_follow.py  test_client_auth_header.py  test_config.py  test_config_catalog.py  test_configless_boot.py  test_db.py  test_deploy_lint.py  test_docs_disabled.py  test_e2e.py  test_estimator.py  test_eta_in_jobinfo.py  test_events.py  test_explain.py  test_fleet_cli.py  test_h1_real_race_regression.py  test_job_arrays.py  test_job_arrays_cli.py  test_jobs_pagination.py  test_log_retention.py  test_matcher.py  test_metrics.py  (+13 more)
tests/mcp/: test_cli_parity.py  (+12 more)
worker/: capabilities.py  job-worker.laptop.service  job-worker.service  job_worker.py
(+69 files in other folders)
