[project]
name = "jobd"
version = "0.5.6"
description = "Self-hostable GPU-aware job broker for your own machines, with native MCP/agent integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jaret Arnold" }]
keywords = ["job-queue", "gpu", "scheduler", "mcp", "self-hosted", "homelab"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.110",
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.9",
    "httpx>=0.26",
    "sse-starlette>=2.0",
]

[project.urls]
Homepage = "https://github.com/musharna/jobd"
Repository = "https://github.com/musharna/jobd"
Issues = "https://github.com/musharna/jobd/issues"
Changelog = "https://github.com/musharna/jobd/blob/main/CHANGELOG.md"

[project.optional-dependencies]
worker = [
    "httpx>=0.26",
    "psutil>=5.9",
    "nvidia-ml-py>=12",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML",
]
mcp = ["mcp>=1.0", "httpx>=0.27"]

[project.scripts]
jobd = "jobd.main:run"
job = "job_cli.cli:app"
jobd-mcp = "jobd.mcp.server:main"
jobd-worker = "jobd.worker.job_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobd", "src/job_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real jobd broker; skipped unless RUN_LIVE_JOBD=1",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F (default) plus import-sorting, bugbear, pyupgrade, and simplify.
# E501 (line-too-long) is intentionally left to the formatter — `ruff format`
# wraps code; E501 would otherwise only nag about long strings/comments/URLs.
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Typer requires typer.Argument()/typer.Option() as argument defaults — these
# are not the mutable-default antipattern B008 targets.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# Nested `with patch.object(...)` is a readable, idiomatic test pattern.
"tests/**" = ["SIM117"]
